fonts.css
/*
  Defines the custom and standard fonts that we are including on this page to
  demonstrate rendering differences
*/

@font-face {
  font-family: 'khmer_busra_test';
  unicode-range: U+1780-17FF, U+25CC;
  src: url(Busra-Regular.ttf);
  src: url(Busra-Regular.woff2) format(woff2),
       url(Busra-Regular.woff) format(woff),
       url(Busra-Regular.ttf);
}

@font-face {
  font-family: 'Khmer Mondulkiri';
  src: url(Mondulkiri-R.ttf);
}

@font-face {
  font-family: 'Noto Sans Khmer';
  src: url(NotoSansKhmer-Regular.ttf);
}

@font-face {
  font-family: 'Khmer OS Battambang';
  src: url(KhmerOSBattambang-Regular.ttf);
}

html #ta1.font-system {
  font-family: sans-serif !important;
}

html #ta1.font-khmer-mondulkiri {
  font-family: "Khmer Mondulkiri" !important;
}

html #ta1.font-khmer-busra-test {
  font-family: "khmer_busra_test" !important;
}

html #ta1.font-noto-sans-khmer {
  font-family: "Noto Sans Khmer" !important;
}

html #ta1.font-khmer-os-battambang {
  font-family: "Khmer OS Battambang" !important;
}

